# github-actions-python-demo

./: README.md  pyproject.toml
.github/actions/: python-package-action.yaml
.github/workflows/: python-package-build-merged.yaml  python-package-build.yaml
