[tool.poetry]
name = "github-actions-python-demo"
version = "0.1.0"
description = "Github Actions demo - building a simple Python package"
authors = ["matemijolovic <mate.mijolovic@gmail.com>"]
readme = "README.md"
packages = [
    { include = "example_package" },
]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
